--- a/lesson7.html
+++ b/lesson7.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>Lesson 7 - Assignment</title>				
         <link rel="stylesheet" type="text/css" href="lesson.css">
-        <script type="text/javascript" src="lesson.js"></script>
+        <script type="text/javascript" src="lesson7.js"></script>
     </head>    
 	<body>
         <div id="bodywrap">
