--- a/lesson7.html
+++ b/lesson7.html
@@ -104,7 +104,7 @@
             
                         <tr class="form">    
                             <th class="form"><label for="quantity">Sticker Quantity:</label></th>
-                            <td class="form"><input type="text" name="quantity" id="quantity" value="1" onblur="processInput(this);" /></td>
+                            <td class="form"><input type="text" name="quantity" id="quantity" placeholder="1-99" onblur="processInput(this);" /></td>
                             <td id="errorquantity" class="error"></td>
                         </tr>
             
