--- a/Final Project/finalproject.html
+++ b/Final Project/finalproject.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+<!-- f.tenorio June 2017 -->
 
+<!DOCTYPE html>
 <html lang="en">
     <head>
 		<meta charset="UTF-8">
@@ -11,7 +12,7 @@
         <div id="body_wrap">
             <header> <!-- Header -->   
                 <h1>Final Project</h1>
-                <h2>Faith-Lynn Tenorio</h2>               
+                <h2>F. Tenorio</h2>               
             </header>  
             
             <div id="main_wrap">
