--- a/Final Project/finalproject.html
+++ b/Final Project/finalproject.html
@@ -41,9 +41,10 @@
                         <form action="#" method="post" enctype="multipart/form-data" name="time_form" id="time_form">                
                             <p class="forminput">
                                 <label for="input_time">Enter time for countdown.<br />(1 seconds to 10 minutes)</label><br />
-                                <input type="text" name="input_time" id="input_time" size="30" maxlength="8" placeholder="00:00:00"/>
+                                <input type="text" name="input_time" id="input_time" size="30" maxlength="8" placeholder="enter as mm:ss:hh"/>
                             </p>
                         </form>
+                        <p id="error_log"></p>
                     </div>
                 </section>
             
