--- a/Final Project/finalproject.html
+++ b/Final Project/finalproject.html
@@ -1,6 +1,5 @@
-<!-- f.tenorio June 2017 -->
-
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
 		<meta charset="UTF-8">
@@ -12,7 +11,7 @@
         <div id="body_wrap">
             <header> <!-- Header -->   
                 <h1>Final Project</h1>
-                <h2>F. Tenorio</h2>               
+                <h2>Faith-Lynn Tenorio</h2>               
             </header>  
             
             <div id="main_wrap">
@@ -24,7 +23,7 @@
                     
                     <div id="watch_face"> <!-- Current Time and Input Field -->
                         <h3 id="mode_state">Stopwatch</h3>
-                        <p id="current_time">00:00:00</p>
+                        <p id="current_time" class="blink_off">00:00:00</p>
                         <h4>mm:ss:hh</h4>
                     </div>
 
