--- a/Final Project/finalproject.html
+++ b/Final Project/finalproject.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-
+<!-- f.tenorio JUNE 2017 -->
 <html lang="en">
     <head>
-		<meta charset="UTF-8">
-		<title>Final Project</title>				
+	<meta charset="UTF-8">
+	<title>Final Project</title>				
         <link rel="stylesheet" type="text/css" href="finalproject.css">
         <script type="text/javascript" src="finalproject.js"></script>
     </head>    
@@ -11,7 +11,7 @@
         <div id="body_wrap">
             <header> <!-- Header -->   
                 <h1>Final Project</h1>
-                <h2>Faith-Lynn Tenorio</h2>               
+                <h2>F. Tenorio</h2>               
             </header>  
             
             <div id="main_wrap">
